# esp32-sdcard

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
