[package]
name = "esp32-sdcard"
version = "0.1.0"
authors = ["hammer90"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "SD Card libary for ESP32"
repository = "https://github.com/hammer90/esp32-sdcard"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-hal = "0.40"

[build-dependencies]
embuild = { version = "0.31", features = ["elf"] }
anyhow = "1"

