[package]
name = "esp32-sdcard"
version = "0.2.0"
authors = ["hammer90"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "SD Card libary for ESP32"
repository = "https://github.com/hammer90/esp32-sdcard"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
log = "0.4"
esp-idf-hal = "0.44.1"
esp-idf-sys = "0.35.0"

[build-dependencies]
embuild = { version = "0.32.0", features = ["elf"] }
anyhow = "1.0.98"
